crates/test-ui/ui/msg_send_underspecified_error.stderr
error[E0282]: type annotations needed
 --> ui/msg_send_underspecified_error.rs
  |
  |     let _: Result<(), _> = unsafe { msg_send![obj, error: _] };
  |            ^^^^^^^^^^^^^ cannot infer type
